fix/VA 1382-IV Border Outline is not visible withing text content (#383)
* Removes the unnecessary stuff from the interactive-video.css file

* VA-1382 Adds focus indicator in the dialog-interaction text content

* VA-1382 Moved the focus-indator style in h5p-components

* VA-1382 removes h5p-link specific style from IV

--- a/src/styles/interactive-video.css
+++ b/src/styles/interactive-video.css
@@ -107,12 +107,11 @@
   outline: none;
 }
 
-.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible,
-.h5p-interactive-video .h5p-interaction.h5p-link-interaction a:focus-visible {
+.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible {
   outline: 2px solid #179fff;
 }
 
-.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible{
+.h5p-interactive-video .h5p-interaction .h5p-image:focus-visible {
   outline-offset: 8px;
 }
 
